--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "type": "module",
   "author": "Lucas Zanetti",
   "license": "ISC",
   "dependencies": {
     "csv": "^6.3.3",
+    "express": "^4.18.2",
     "mysql": "^2.18.1"
   }
 }
